--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,6 +19,8 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
+    - name: Install MGCB
+      run: dotnet tool install -g dotnet-mgcb
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
