--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,9 +20,11 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Install MGCB
-      run: dotnet tool install dotnet-mgcb
+      run: dotnet tool install -g dotnet-mgcb
     - name: Restore dependencies
       run: dotnet restore
+    - name: Restore tools
+      run: dotnet tool restore
     - name: Build
       run: dotnet build --no-restore
     - name: Upload artifact
