--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,14 +19,21 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
+        
     - name: Install MGCB
       run: dotnet tool install -g dotnet-mgcb
+      shell: pwsh
+      
     - name: Restore dependencies
       run: dotnet restore
+      
     - name: Restore tools
       run: dotnet tool restore
+      shell: pwsh
+      
     - name: Build
       run: dotnet build --no-restore
+      
     - name: Upload artifact
       uses: actions/upload-artifact@v3
       with:
