--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,17 +15,24 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-
-    - name: Build
-      uses: igotinfected-ci/build-monogame@v2
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: "6.0.x"
-        solution-path: '${{ github.workspace }}\ShaderPreview.sln'
-        content-mgcb-path: '${{ github.workspace }}\Content'
-        content-mgcb-platform: "DesktopGL"
-        csproj-path: '${{ github.workspace }}\ShaderPreview.csproj'
-        build-target: "Build"
-        build-configuration: "Release"
+        dotnet-version: 6.0.x
+        
+    - name: Install MGCB
+      run: dotnet tool install -g dotnet-mgcb
+      shell: pwsh
+
+    - name: Restore tools
+      run: |
+        cd "${{ github.workspace }}"
+        dotnet tool restore
+      shell: pwsh
+      
+    - name: Build
+      run: dotnet build
+      shell: pwsh
       
     - name: Upload artifact
       uses: actions/upload-artifact@v3
